--- a/ver1.11/config/config.json
+++ b/ver1.11/config/config.json
@@ -1,6 +1,6 @@
 {
     "prefix": "/",
-    "token": "ODAwMjg2ODI0MDE4MjE0OTEy.YAP7Lw.jYVFxiByd6PTW1aplDavzpTVZ9M",
+    "token": "",
     "status_1": " /help",
     "status_2": " created_By_Nhaatj",
     "status_3": " Sad_time",
